# team-manager

./: LICENSE.txt  README.md  pyproject.toml
src/team_manager/: __about__.py  __init__.py
src/team_manager/player/: models.py  urls.py  views.py
src/team_manager/static/: output.css
src/team_manager/team/: admin.py  models.py  urls.py  views.py
src/team_manager/templates/: base_generic.html
src/team_manager/templates/player/: player_list.html
src/team_manager/templates/team/: team_list.html
